Fix dropdown menu z-index problem
The dropdown was hidden below the submenu when submenu was displayed.

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -461,7 +461,7 @@ h1 a { outline: none; }
     padding: 4px;
     /* The rules below fix MSIE 8 popup menu z-index */
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
 
 #site-title {
@@ -628,7 +628,7 @@ body.maximized #bottom-bar {
     padding-left: 3px;
     /* The rules below fix MSIE 8 dropdown menu z-index */
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 #menu h3 {
     display: none;
